@@ -77,6 +77,7 @@ PostGIS 2.5.0
   - #4084: Fixed wrong code-comment regarding front/back of BOX3D (Matthias Bay)
   - #4060, #4094, PostgreSQL JIT support (Raúl Marín, Laurenz Albe)
   - #3960, ST_Centroid now uses lwgeom_centroid (Darafei Praliaskouski)
+  - #4103, ST_PointOnSurface can handle invalid (Darafei Praliaskouski)
 
 PostGIS 2.4.4
 2018/04/08
